# EmbeddedVisualControl

./: .gitignore  route_log.csv  semantic_grid.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/jetson_camera/share/jetson_camera/: package.bash  package.sh  package.xml
install/jetson_interfaces/share/jetson_interfaces/: local_setup.dsv  local_setup.sh  package.dsv  package.sh  package.xml
src/: route_log.csv
src/install/: local_setup.sh  setup.sh
src/jetson_camera/: package.xml  setup.cfg  setup.py
src/jetson_camera/config/: parameters.yaml
src/jetson_camera/jetson_camera/: QR_node.py  ToF_sensor.py  algorithm_node.py  algorithm_util.py  application_node.py  calib.npz  camera_detection.py  encoder_node.py  face_detection_recognition.py  face_detection_recognition_node.py  face_tracking_sub.py  grid_mapping_node.py  imu_driver.py  imu_node.py  imu_yaw_accuracy_test.py  main_qr.py  movement_node.py  object_detection.py  plot_route.py  processing_node.py  publisher_node.py  sensor_fusion.py  square_driver_node.py  subscriber_node.py  tracking.py
src/jetson_camera/jetson_camera/Driver/: ToFDriver.py
src/jetson_camera/jetson_camera/install/: local_setup.sh  (+1 more)
src/jetson_camera/launch/: ToF_sensor.launch.py  camera_all.launch.py  camera_detection.launch.py  camera_processor.launch.py  imu.launch.py  movement_all.launch.py  object_detection.launch.py  route_tracking.launch.py  sensor_fusion.launch.py  sensors.launch.py
src/jetson_interfaces/: CMakeLists.txt
src/jetson_interfaces/msg/: DualImage.msg
src/log/: latest_build
(+77 files in other folders)
